package modelo.enums;

public enum TipoDocumento {
    CEDULA,
    PASAPORTE,
    NIT,
    CEDULA_EXTRANJERA
}
