@startuml diagrama-clases
skinparam packageStyle rectangle

' =========================
' INTERFACES
' =========================
package "modelo.interfaces" {
    interface Consultable {
        + obtenerResumen() : String
        + estaActivo() : boolean
        + obtenerTipo() : String
    }

    interface Transaccionable {
        + depositar(monto: double) : void
        + retirar(monto: double) : void
        + calcularComision(monto: double) : double
        + consultarSaldo() : double
    }

    interface Auditable {
        + obtenerFechaCreacion(): LocalDateTime
        + obtenerUltimaModificacion(): LocalDateTime
        + obtenerUsuarioModificacion(): String
        + registrarModificacion(usuario: String): void
    }

    interface Notificable {
        + notificar(mensaje: String): void
        + obtenerContacto(): String
        + aceptaNotificaciones(): boolean
    }
}

' =========================
' ENUMS
' =========================
package "modelo.enums" {
    enum EstadoTransaccion {
        PENDIENTE
        PROCESANDO
        COMPLETADA
        RECHAZADA
        REVERTIDA
    }

    enum TipoCuenta {
        CORRIENTE
        AHORROS
        CREDITO
    }

    enum Turno {
        MAÑANA
        TARDE
        NOCHE
    }

    enum TipoDocumento {
        CEDULA
        PASAPORTE
        NIT
        CEDULA_EXTRANJERIA
    }
}

' =========================
' EXCEPCIONES
' =========================
package "modelo.excepciones" {
    class Exception <<external>>
    class RuntimeException <<external>>

    class SistemaBancarioException {
        - codigoError: String
        - timestamp: LocalDateTime
        + toString(): String
    }

    class BancoRuntimeException {
        + toString(): String
    }

    Exception <|-- SistemaBancarioException
    SistemaBancarioException <|-- SaldoInsuficienteException
    SistemaBancarioException <|-- CuentaBloqueadaException
    SistemaBancarioException <|-- ClienteNoEncontradoException
    SistemaBancarioException <|-- CapacidadExcedidaException

    RuntimeException <|-- BancoRuntimeException
    BancoRuntimeException <|-- DatoInvalidoException
    BancoRuntimeException <|-- EstadoTransaccionInvalidoException
    BancoRuntimeException <|-- PermisoInsuficienteException

    class SaldoInsuficienteException {
        - saldoActual: double
        - montoSolicitado: double
    }

    class CuentaBloqueadaException

    class ClienteNoEncontradoException {
        - idCliente: String
    }

    class CapacidadExcedidaException {
        - capacidadMaxima: int
    }

    class DatoInvalidoException {
        - campo: String
        - valorRecibido: Object
    }

    class EstadoTransaccionInvalidoException

    class PermisoInsuficienteException
}

' =========================
' ABSTRACTAS
' =========================
package "modelo.abstractas" {

    abstract class Persona {
        - id: String
        - nombre: String
        - apellido: String
        - fechaNacimiento: LocalDate
        - email: String
        + {abstract} calcularEdad(): int
        + {abstract} obtenerTipo(): String
        + {abstract} obtenerDocumentoIdentidad(): String
        + getNombreCompleto(): String
    }

    abstract class Cliente {
        - cuentas: Cuenta[5]
        + {abstract} agregarCuenta(c: Cuenta): void
        + getCuentas(): Cuenta[]
    }

    abstract class Empleado {
        - legajo: String
        - fechaContratacion: LocalDate
        - salarioBase: double
        - activo: boolean
        + {abstract} calcularSalario(): double
        + {abstract} calcularBono(): double
        + calcularAntiguedad(): int
    }

    abstract class Cuenta {
        - numeroCuenta: String
        - saldo: double
        - bloqueada: boolean
        - fechaCreacion: LocalDateTime
        - ultimaModificacion: LocalDateTime
        - usuarioModificacion: String
        - historial: Transaccion[20]
        + {abstract} calcularInteres(): double
        + {abstract} getLimiteRetiro(): double
        + {abstract} getTipoCuenta(): String
        + verificarBloqueada(): void
        + agregarAlHistorial(t: Transaccion): void
        + getHistorial(): Transaccion[]
    }

    Persona <|-- Cliente
    Persona <|-- Empleado
}

' =========================
' PERSONAS
' =========================
package "modelo.personas" {

    class ClienteNatural {
        - tipoDocumento: TipoDocumento
        - numeroDocumento: String
    }

    class ClienteEmpresarial {
        - nit: String
        - razonSocial: String
        - representanteLegal: String
    }

    Cliente <|-- ClienteNatural
    Cliente <|-- ClienteEmpresarial
}

' =========================
' EMPLEADOS
' =========================
package "modelo.empleados" {

    class Cajero {
        - turno: Turno
        - sucursalAsignada: String
        - transaccionesDia: int
    }

    class AsesorFinanciero {
        - comisionBase: double
        - metasMensuales: double
        - clientesAsignados: Cliente[20]
    }

    class GerenteSucursal {
        - sucursal: String
        - presupuestoAnual: double
        - empleadosACargo: Empleado[30]
        + aprobarCredito(solicitante: Empleado): void
    }

    Empleado <|-- Cajero
    Empleado <|-- AsesorFinanciero
    Empleado <|-- GerenteSucursal
}

' =========================
' CUENTAS
' =========================
package "modelo.cuentas" {

    class CuentaCorriente {
        - montoSobregiro: double
        - comisionMantenimiento: double
    }

    class CuentaAhorros {
        - tasaInteres: double
        - retirosMesActual: int
        - maxRetirosMes: int
    }

    class CuentaCredito {
        - limiteCredito: double
        - tasaInteres: double
        - deudaActual: double
    }

    Cuenta <|-- CuentaCorriente
    Cuenta <|-- CuentaAhorros
    Cuenta <|-- CuentaCredito
}

' =========================
' BANCO
' =========================
package "modelo.banco" {

    class Banco {
        - nombre: String
        - empleados: Empleado[50]
        - clientes: Cliente[200]
        - cuentas: Cuenta[500]
        + registrarCliente(c: Cliente): void
        + registrarEmpleado(e: Empleado): void
        + abrirCuenta(idCliente: String, c: Cuenta): void
        + buscarCliente(id: String): Cliente
        + calcularNominaTotal(): double
        + calcularInteresesMensuales(): void
    }

    class Transaccion {
        - id: String
        - cuentaOrigen: Cuenta
        - cuentaDestino: Cuenta
        - monto: double
        - estado: EstadoTransaccion
        - fecha: LocalDateTime
        - descripcion: String
        + cambiarEstado(nuevo: EstadoTransaccion): void
        + generarComprobante(): String
    }
}

' =========================
' IMPLEMENTACIONES DE INTERFACES
' =========================

ClienteNatural ..|> Consultable
ClienteNatural ..|> Notificable
ClienteNatural ..|> Auditable

ClienteEmpresarial ..|> Consultable
ClienteEmpresarial ..|> Notificable
ClienteEmpresarial ..|> Auditable

AsesorFinanciero ..|> Consultable
AsesorFinanciero ..|> Auditable

GerenteSucursal ..|> Consultable
GerenteSucursal ..|> Auditable

CuentaCorriente ..|> Consultable
CuentaCorriente ..|> Transaccionable
CuentaCorriente ..|> Auditable

CuentaAhorros ..|> Consultable
CuentaAhorros ..|> Transaccionable
CuentaAhorros ..|> Auditable

CuentaCredito ..|> Consultable
CuentaCredito ..|> Transaccionable
CuentaCredito ..|> Auditable

Banco ..|> Auditable

' =========================
' RELACIONES
' =========================

Banco "1" *-- "0..50" Empleado
Banco "1" *-- "0..200" Cliente
Banco "1" *-- "0..500" Cuenta

Cliente "1" o-- "0..5" Cuenta
Cuenta "1" o-- "0..20" Transaccion

Transaccion --> "1" Cuenta : origen
Transaccion --> "0..1" Cuenta : destino

@enduml